- https://github.com/eclipse-syson/syson/issues/297[#297] [diagrams] Handle Succession as edge between Actions inside action flow compartment
- https://github.com/eclipse-syson/syson/issues/308[#308] [statetransition-view] Add "Add existing elements" tools on State & StateDefinition graphical elements.

=== New features

- https://github.com/eclipse-syson/syson/issues/147[#147] [general-view] Refactor compartments of `RequirementDefinition` and `RequirementUsage` to better fit the specification and examples.
- https://github.com/eclipse-syson/syson/issues/151[#151] [diagrams] Add "Become nested" edge tools for AttributeUsage, ItemUsage, PartUsage and PortUsage.
- https://github.com/eclipse-syson/syson/issues/154[#154] [diagrams] Add creation node tools inside existing usage elements.
- https://github.com/eclipse-syson/syson/issues/163[#163] [diagrams] Add composite edges between usage and compartment content
- https://github.com/eclipse-syson/syson/issues/165[#165] [general-view] Handle OccurrenceDefinition and OccurrenceUsage in General View diagram 
- https://github.com/eclipse-syson/syson/issues/177[#177] [diagrams] Add reconnect tools for composition edges
- https://github.com/eclipse-syson/syson/issues/180[#180] [diagrams] Handle Allocation definition and Allocation usage
- https://github.com/eclipse-syson/syson/issues/196[#196] [export] SysML standard serialization format
- https://github.com/eclipse-syson/syson/issues/219[#219] [diagrams] Handle ConjugatedPortDefinition in diagrams, Explorer and Details View.
- https://github.com/eclipse-syson/syson/issues/234[#234] [interconnection-view] Handle InterfaceUsages edges between PortUsages in InterconnectionView.
- https://github.com/eclipse-syson/syson/issues/175[#175] [diagrams] Add the State Transition view diagram
- https://github.com/eclipse-syson/syson/issues/242[#242] [diagrams] Handle Inherited features in features compartments.